--- a/public/admin/css/common.css
+++ b/public/admin/css/common.css
@@ -1,3 +1,4 @@
+/* 公共样式 */
 @charset 'UTF8';
 .bg_body{
     background: #2F4D4D;
@@ -11,4 +12,118 @@
 .bg_body .panel{
     border-radius: 8px;
     overflow: hidden;
+}
+html,body{
+    height: 100%;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    box-sizing: border-box;
+}
+a:link,a:visited,a:hover,a:active{
+text-decoration: none;
+}
+
+/* 后台首页部分 */
+/* 做猜测导航 */
+.lt_aside{
+    width: 180px;
+    height: 100%;
+    background: #222d32;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all 1s;
+}
+.lt_aside.now{
+    left: -180px;
+}
+.lt_title{
+    height: 50px;
+    background:#367fa9; 
+}
+.lt_title a{
+    display: block;
+    width: 180px;
+    height: 50px;
+    line-height: 50px;
+    font-size: 24px;
+    color: #fff;
+    text-align: center;
+}
+.lt_user{
+    width: 180px;
+}
+.lt_user img{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    display: block;
+    margin:  50px auto 0;
+}
+.lt_user p{
+    text-align: center;
+    line-height: 3;
+    color: #fff;
+    font-size: 18px;
+}
+.lt_nav li a{
+    width: 180px;
+    display: block;
+    height: 40px;
+    line-height:34px;
+    border: 3px solid transparent;
+    font-size: 16px; 
+    padding-left: 30px;
+    color: #ccc;
+}
+.lt_nav li a>span{
+    margin-right: 5px;
+}
+.lt_nav li a.now {
+    border-left-color: #069;
+    background: #000;
+    color: #fff;
+}
+.lt_nav .cate>a{
+    display: block;
+    height: 40px;
+    line-height:34px;
+    padding-left: 50px;
+    color: #ccc;
+    font-size: 14px;
+}
+.lt_nav .cate>a.now{
+    background: #000;
+}
+/* 右侧主体部分 */
+.lt_main{
+    height:100%;
+    margin-left: 180px;
+    transition: all 1s;
+}
+.lt_main.now{
+    margin-left: 0;
+}
+.lt_main_top{
+    height: 50px;
+    background: #3c8dbc;
+    line-height: 50px;
+    padding: 0 10px;
+    margin-bottom: 30px;
+}
+.lt_main_top a{
+    color: #fff;
+    font-size: 18px;
+}
+
+
+/* 模态框部分样式 */
+.modal{
+    width: 100%;
+    height: 100%;
+    
 }
