用户管理页面基本功能完成

--- a/public/admin/css/common.css
+++ b/public/admin/css/common.css
@@ -140,3 +140,11 @@ text-decoration: none;
     width: 100%;
     height: 400px;
 }
+
+
+
+/* 用户管理页面 */
+.table.table-bordered td {
+    text-align: center;
+    vertical-align: middle;
+}
